--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
     <div id="container">
       <div>
-        <input type="text" placeholder="0" />
+        <input type="text" placeholder="0" id="display" />
       </div>
       <div>
         <button value="7" class="digits">7</button>
@@ -34,11 +34,11 @@
       <div>
         <button value="0" class="digits">0</button>
         <button value="." class="digits">.</button>
-        <button value="clear" class="digits">clear</button>
+        <button value="clear" class="digits" id="clear">clear</button>
         <button value="+" class="digits">+</button>
       </div>
       <div>
-        <button value="=" class="enter">=</button>
+        <button value="=" class="enter" id="enter">=</button>
       </div>
     </div>
   </body>
